remove align-items center as this causes issues in other components

--- a/polaris-react/src/components/Choice/Choice.scss
+++ b/polaris-react/src/components/Choice/Choice.scss
@@ -4,9 +4,6 @@
   display: flex;
   justify-content: flex-start;
   padding: var(--p-space-1) 0;
-  #{$se23} & {
-    align-items: center;
-  }
   cursor: pointer;
 
   @media #{$p-breakpoints-sm-up} {
@@ -59,6 +56,10 @@
   @media #{$p-breakpoints-md-down} {
     // stylelint-disable-next-line -- Polaris component custom properties
     --pc-choice-size: 22px;
+    #{$se23} {
+      // stylelint-disable-next-line -- PSE23 Polaris component custom properties
+      --pc-choice-size: 20px;
+    }
   }
   display: flex;
   flex: 0 0 auto;
@@ -93,6 +94,10 @@
   @media #{$p-breakpoints-md-down} {
     // stylelint-disable-next-line -- Polaris component custom properties
     --pc-choice-size: 22px;
+    #{$se23} {
+      // stylelint-disable-next-line -- PSE23 Polaris component custom properties
+      --pc-choice-size: 20px;
+    }
   }
   // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
   padding-left: calc(var(--p-space-2) + var(--pc-choice-size));
